cleaning up warnings